web/app/themes/envisioningjustice/assets/styles/components/_header.scss
// Header

// Top Bar
.il-humanities-bar {
  height: 32px;
  position: relative;
  &::before {
    top: 0;
    left: 0;
    right: 0;
    content: '';
    height: 23px;
    position: absolute;
    background: $gray-lightest;
  }

  .container {
    padding: 0;
    background: $gray;
  }

  a {
    position: relative;
    display: inline-block;
  }

  .il-humanities-logo {
    width: 78px;
    height: 32px;
  }

  @include media-md {
    height: 49px;
    &::before {
      height: 36px;
    }

    .container {
      padding: 0 $padding-medium 0 89px;
    }

    .il-humanities-logo {
      height: 49px;
      width: 123px;
    }
  }
}

.site-header {
  .container {
    z-index: 2;
    padding-top: 30px;
    background: $gray;
    position: relative;
    &::before {
      left: 0;
      top: 36px;
      z-index: 0;
      content: '';
      height: 2px;
      width: 185px;
      position: absolute;
      background: $yellow;
      transform-origin: left;
      transform: skewY(2.68deg);
      will-change: transform, top;
      transition: transform .2s ease-out, top .2s ease-out;
    }
    &::after {
      z-index: -1;
    }
    &.-hover {
      &::before {
        top: 38px;
        transform: none;
      }
    }

    .-inner {
      @include clearfix;
    }
  }

  .site-logo {
    margin: 0;
    z-index: 1;
    float: left;
    position: relative;
    a {
      display: inline-block;
    }
    .icon {
      height: 33px;
      width: 120px;
      fill: $black;
    }
  }

  // Search
  .search-form {
    @include angledEdge(before, $color: $black);
    left: 0;
    right: 0;
    top: 100%;
    z-index: 10;
    height: 100%;
    position: fixed;
    will-change: top;
    margin-top: 15px;
    color: $white-dark;
    background: $black;
    transition: top .2s ease-out;
    -webkit-font-smoothing: antialiased;
    &.-active {
      top: 0;
      .-inner {
        opacity: 1;
        transform: translateY(0);
      }
    }

    .-inner {
      opacity: 0;
      transform: translateY(50%);
      padding: 41px $padding $padding;
      will-change: opcaity, transform;
      transition: opacity .4s ease-out .2s, transform .4s ease-out;
    }

    .search-close {
      top: 31px;
      right: 16px;
      cursor: pointer;
      @include type-h3;
      color: $white-dark;
      position: absolute;
      .text {
        width: 60px;
        text-align: right;
        display: inline-block;
        word-wrap: break-word;
      }
      .icon {
        width: 25px;
        height: 25px;
        fill: $white-dark;
        transform: rotate(45deg);
      }
    }

    h3 {
      margin: 0 0 35px;
      @include type-h2;
    }

    .search-submit {
      width: 100%;
      margin-top: 20px;
      @extend .-white-dark;
    }

    .input-wrap {
      &::after {
        background-color: $white-dark;
      }
    }

    label {
      font-size: 14px;
    }

    @include min-screen($breakpoint-nav) {
      top: 18px;
      margin: 0;
      left: auto;
      padding: 0;
      opacity: 0;
      width: 575px;
      height: auto;
      color: $black;
      background: none;
      position: absolute;
      pointer-events: none;
      right: $padding-medium;
      transition: opacity .2s ease-out;
      &::before {
        display: none;
      }
      &.-active {
        top: 18px;
        opacity: 1;
        pointer-events: auto;
        transition: opacity .2s ease-out .3s;
      }
      
      .-inner {
        padding: 0;
        opacity: 1;
        transform: none;
        @include clearfix;
      }

      .search-close {
        right: 0;
        top: 12px;
        .text {
          display: none;
        }
      }

      h3 {
        display: none;
      }

      .input-wrap {
        float: left;
        width: 400px;
        &::after {
          background-color: $black;
        }
      }

      .search-submit {
        top: 7px;
        width: 100px;
        padding: 10px;
        margin-top: 0;
        margin-left: 20px;
        position: relative;
        display: inline-block;
      }
    }
  }

  @include media-md {

    .container {
      &::before {
        top: 34px;
        width: 100%;
        height: 3px;
      }
    }

    .site-logo {

      .icon {
        height: 45px;
        width: 163px;
      }
    }

  }

  @include min-screen($breakpoint-nav) {

    .container {
      &::before {
        top: 65px;
      }
      &.-hover {
        &::before {
          top: 71px;
        }
      }
    }

    .site-logo {
      top: 31px;
    }
  }

}

.page-header {
  z-index: 1;
  background: $gray;
  position: relative;
  padding-top: $padding-medium;

  .-inner {
    position: relative;
  }

  .page-header-top {
    z-index: 1;
    position: relative;
    @include angledEdge(after, $afterOrientation: rtl, $color: $gray);
    .slashfield {
      z-index: 1;
    }
  }

  .page-header-bottom {
    @extend .break-padding;
    @include angledEdge(before, $beforeOrientation: rtl, $color: $gray);

    h3 {
      margin: 0;
      color: $black;
      @include type-h2;
    }

    .page-header-text {
      @include angledEdge(before, $beforeOrientation: rtl, $color: inherit);
    }

    .page-header-background {
      height: 200px;
      background-size: cover;
      @include angledEdge(after, $afterOrientation: rtl, $color: inherit);
    }

    @include media-md {
      .page-header-text {
        order: 0;
        @include killAngle(before);
        padding-top: $padding-medium;
        &.no-image {
          h3 {
            width: 75%;
          }
        }
      }
      .page-header-background {
        order: 1;
        height: auto;
        @include killAngle(after);
      }
    }
  }

  .page-title {
    margin: 0;
    z-index: 1;
    @include type-h1;
    position: relative;
  }

  .header-text-secondary {
    color: $gray;
    background: $black;
    padding: 0 $padding;
    margin-left: -$padding;
    width: calc(100% + #{$padding * 2});

    @include media-md {
      align-self: flex-end;
      margin-right: -$padding-medium;
      padding: 4vw $padding-medium 70px;
      width: calc(50% + #{$padding-medium});
      @include angledEdge(before, $beforeOrientation: rtl);
    }
  }

  .scroll-to-content {
    bottom: 0;
    right: 50%;
    position: absolute;
    transform: translate(50%, 50%) rotate(90deg);
    @include media-md {
      right: 25%;
    }
  }
}

